--- a/css/a-reset.css
+++ b/css/a-reset.css
@@ -81,6 +81,11 @@ a[rel="tofancy"]>img{
 	cursor: inherit!important;
 }
 
+
 .test-class{
     color:red;
+}
+
+.new-class-from-tester{
+    color:black;
 }
